# c-python-hello-world

./: .gitignore  CMakeLists.txt  main.c
.cache/clangd/index/: main.c.C75A4E6FF7DCD664.idx
scripts/: hello.py
